; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libkern/kxld/extr_kxld_object.c_kxld_object_resolve_symbol.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libkern/kxld/extr_kxld_object.c_kxld_object_resolve_symbol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KERN_FAILURE = common dso_local global i32 0, align 4
@finish = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kxld_object_resolve_symbol(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* @KERN_FAILURE, align 4
  store i32 %9, i32* %7, align 4
  store i32* null, i32** %8, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = call i32* @get_mutable_sym(i32* %10, i32* %11)
  store i32* %12, i32** %8, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = load i32, i32* @finish, align 4
  %15 = load i32, i32* @KERN_FAILURE, align 4
  store i32 %15, i32* %7, align 4
  %16 = call i32 @require_action(i32* %13, i32 %14, i32 %15)
  %17 = load i32*, i32** %8, align 8
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @kxld_sym_resolve(i32* %17, i32 %18)
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* @finish, align 4
  %22 = call i32 @require_noerr(i32 %20, i32 %21)
  %23 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %23, i32* %7, align 4
  br label %24

24:                                               ; preds = %3
  %25 = load i32, i32* %7, align 4
  ret i32 %25
}

declare dso_local i32* @get_mutable_sym(i32*, i32*) #1

declare dso_local i32 @require_action(i32*, i32, i32) #1

declare dso_local i32 @kxld_sym_resolve(i32*, i32) #1

declare dso_local i32 @require_noerr(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
